// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`openApiTsClientGenerator - duplicate types > should handle duplicate type names between schema and operation request types 1`] = `
"export type ChatRequest = {
  message: string;
};
export type ChatResponse = {
  message: string;
};
export type HTTPValidationError = {
  detail?: Array<ValidationError>;
};
export type InternalServerErrorDetails = {
  detail: string;
};
export type LocationItem = string | number;
export type ValidationError = {
  loc: Array<LocationItem>;
  msg: string;
  type: string;
};

export type ChatOperationRequest = ChatRequest;
export type Chat422Error = {
  status: 422;
  error: HTTPValidationError;
};
export type Chat500Error = {
  status: 500;
  error: InternalServerErrorDetails;
};
export type ChatError = Chat422Error | Chat500Error;
"
`;

exports[`openApiTsClientGenerator - duplicate types > should handle duplicate type names between schema and operation request types 2`] = `
"import type {
  ChatRequest,
  ChatResponse,
  HTTPValidationError,
  InternalServerErrorDetails,
  LocationItem,
  ValidationError,
  ChatOperationRequest,
} from './types.gen.js';

/**
 * Utility for serialisation and deserialisation of API types.
 */
export class $IO {
  protected static $mapValues = (data: any, fn: (item: any) => any) =>
    Object.fromEntries(Object.entries(data).map(([k, v]) => [k, fn(v)]));

  public static ChatRequest = {
    toJson: (model: ChatRequest): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.message === undefined
          ? {}
          : {
              message: model.message,
            }),
      };
    },
    fromJson: (json: any): ChatRequest => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        message: json['message'],
      };
    },
  };

  public static ChatResponse = {
    toJson: (model: ChatResponse): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.message === undefined
          ? {}
          : {
              message: model.message,
            }),
      };
    },
    fromJson: (json: any): ChatResponse => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        message: json['message'],
      };
    },
  };

  public static HTTPValidationError = {
    toJson: (model: HTTPValidationError): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.detail === undefined
          ? {}
          : {
              detail: model.detail.map($IO.ValidationError.toJson),
            }),
      };
    },
    fromJson: (json: any): HTTPValidationError => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        ...(json['detail'] === undefined
          ? {}
          : {
              detail: (json['detail'] as Array<any>).map(
                $IO.ValidationError.fromJson,
              ),
            }),
      };
    },
  };

  public static InternalServerErrorDetails = {
    toJson: (model: InternalServerErrorDetails): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.detail === undefined
          ? {}
          : {
              detail: model.detail,
            }),
      };
    },
    fromJson: (json: any): InternalServerErrorDetails => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        detail: json['detail'],
      };
    },
  };

  public static LocationItem = {
    toJson: (model: LocationItem): any => {
      if (model === undefined || model === null) {
        return model;
      }
      if (typeof model === 'string') {
        return model;
      }
      if (typeof model === 'number') {
        return model;
      }
      return model;
    },
    fromJson: (json: any): LocationItem => {
      if (json === undefined || json === null) {
        return json;
      }
      if (typeof json === 'string') {
        return json;
      }
      if (typeof json === 'number') {
        return json;
      }
      return json;
    },
  };

  public static ValidationError = {
    toJson: (model: ValidationError): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.loc === undefined
          ? {}
          : {
              loc: model.loc.map((item0) => item0),
            }),
        ...(model.msg === undefined
          ? {}
          : {
              msg: model.msg,
            }),
        ...(model.type === undefined
          ? {}
          : {
              type: model.type,
            }),
      };
    },
    fromJson: (json: any): ValidationError => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        loc: (json['loc'] as Array<any>).map((item0) => item0),
        msg: json['msg'],
        type: json['type'],
      };
    },
  };
}

/**
 * Client configuration for TestApi
 */
export interface TestApiConfig {
  /**
   * Base URL for the API
   */
  url: string;
  /**
   * Custom instance of fetch. By default the global 'fetch' is used.
   * You can override this to add custom middleware for use cases such as adding authentication headers.
   */
  fetch?: typeof fetch;
  /**
   * Additional configuration
   */
  options?: {
    /**
     * By default, the client will add a Content-Type header, set to the media type defined for
     * the request in the OpenAPI specification.
     * Set this to false to omit this header.
     */
    omitContentTypeHeader?: boolean;
  };
}

/**
 * API Client for TestApi
 */
export class TestApi {
  private $config: TestApiConfig;

  constructor(config: TestApiConfig) {
    this.$config = config;

    this.chat = this.chat.bind(this);
  }

  private $url = (
    path: string,
    pathParameters: { [key: string]: any },
    queryParameters: { [key: string]: any },
    collectionFormats?: { [key: string]: 'multi' | 'csv' },
  ): string => {
    const baseUrl = this.$config.url.endsWith('/')
      ? this.$config.url.slice(0, -1)
      : this.$config.url;
    const pathWithParameters = Object.entries(pathParameters).reduce(
      (withParams, [key, value]) =>
        withParams.replace(\`{\${key}}\`, encodeURIComponent(\`\${value}\`)),
      path,
    );
    const queryString = Object.entries(queryParameters)
      .map(([key, value]) => {
        if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
          return value
            .map(
              (v) => \`\${encodeURIComponent(key)}=\${encodeURIComponent(\`\${v}\`)}\`,
            )
            .join('&');
        }
        return \`\${encodeURIComponent(key)}=\${encodeURIComponent(Array.isArray(value) ? value.map(String).join(',') : String(value))}\`;
      })
      .join('&');
    return (
      baseUrl + pathWithParameters + (queryString ? \`?\${queryString}\` : '')
    );
  };

  private $headers = (
    headerParameters: { [key: string]: any },
    collectionFormats?: { [key: string]: 'multi' | 'csv' },
  ): [string, string][] => {
    return Object.entries(headerParameters).flatMap(([key, value]) => {
      if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
        return value.map((v) => [key, String(v)]) as [string, string][];
      }
      return [[key, String(value)]];
    });
  };

  private $fetch: typeof fetch = (...args) =>
    (this.$config.fetch ?? fetch)(...args);

  public async chat(input: ChatOperationRequest): Promise<ChatResponse> {
    const pathParameters: { [key: string]: any } = {};
    const queryParameters: { [key: string]: any } = {};
    const headerParameters: { [key: string]: any } = {};
    if (!this.$config.options?.omitContentTypeHeader) {
      headerParameters['Content-Type'] = 'application/json';
    }
    const body =
      typeof input === 'object'
        ? JSON.stringify($IO.ChatRequest.toJson(input))
        : String($IO.ChatRequest.toJson(input));

    const response = await this.$fetch(
      this.$url('/chat', pathParameters, queryParameters),
      {
        headers: this.$headers(headerParameters),
        method: 'POST',
        body,
      },
    );

    if (response.status === 200) {
      return $IO.ChatResponse.fromJson(await response.json());
    }
    if (response.status === 422) {
      throw {
        status: response.status,
        error: $IO.HTTPValidationError.fromJson(await response.json()),
      };
    }
    if (response.status === 500) {
      throw {
        status: response.status,
        error: $IO.InternalServerErrorDetails.fromJson(await response.json()),
      };
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }
}
"
`;

exports[`openApiTsClientGenerator - duplicate types > should handle multiple potential conflicts gracefully 1`] = `
"export type Order = {
  id: number;
  productId: number;
  status: string;
};
export type OrderRequest = {
  productId: number;
};
export type User = {
  id: number;
  name: string;
};
export type UserRequest = {
  name: string;
};

export type OrderOperationRequest = OrderRequest;
export type OrderError = never;

export type UserOperationRequest = UserRequest;
export type UserError = never;
"
`;

exports[`openApiTsClientGenerator - duplicate types > should handle multiple potential conflicts gracefully 2`] = `
"import type {
  Order,
  OrderRequest,
  User,
  UserRequest,
  OrderOperationRequest,
  UserOperationRequest,
} from './types.gen.js';

/**
 * Utility for serialisation and deserialisation of API types.
 */
export class $IO {
  protected static $mapValues = (data: any, fn: (item: any) => any) =>
    Object.fromEntries(Object.entries(data).map(([k, v]) => [k, fn(v)]));

  public static Order = {
    toJson: (model: Order): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.id === undefined
          ? {}
          : {
              id: model.id,
            }),
        ...(model.productId === undefined
          ? {}
          : {
              productId: model.productId,
            }),
        ...(model.status === undefined
          ? {}
          : {
              status: model.status,
            }),
      };
    },
    fromJson: (json: any): Order => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        id: json['id'],
        productId: json['productId'],
        status: json['status'],
      };
    },
  };

  public static OrderRequest = {
    toJson: (model: OrderRequest): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.productId === undefined
          ? {}
          : {
              productId: model.productId,
            }),
      };
    },
    fromJson: (json: any): OrderRequest => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        productId: json['productId'],
      };
    },
  };

  public static User = {
    toJson: (model: User): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.id === undefined
          ? {}
          : {
              id: model.id,
            }),
        ...(model.name === undefined
          ? {}
          : {
              name: model.name,
            }),
      };
    },
    fromJson: (json: any): User => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        id: json['id'],
        name: json['name'],
      };
    },
  };

  public static UserRequest = {
    toJson: (model: UserRequest): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.name === undefined
          ? {}
          : {
              name: model.name,
            }),
      };
    },
    fromJson: (json: any): UserRequest => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        name: json['name'],
      };
    },
  };
}

/**
 * Client configuration for TestApi
 */
export interface TestApiConfig {
  /**
   * Base URL for the API
   */
  url: string;
  /**
   * Custom instance of fetch. By default the global 'fetch' is used.
   * You can override this to add custom middleware for use cases such as adding authentication headers.
   */
  fetch?: typeof fetch;
  /**
   * Additional configuration
   */
  options?: {
    /**
     * By default, the client will add a Content-Type header, set to the media type defined for
     * the request in the OpenAPI specification.
     * Set this to false to omit this header.
     */
    omitContentTypeHeader?: boolean;
  };
}

/**
 * API Client for TestApi
 */
export class TestApi {
  private $config: TestApiConfig;

  constructor(config: TestApiConfig) {
    this.$config = config;

    this.order = this.order.bind(this);
    this.user = this.user.bind(this);
  }

  private $url = (
    path: string,
    pathParameters: { [key: string]: any },
    queryParameters: { [key: string]: any },
    collectionFormats?: { [key: string]: 'multi' | 'csv' },
  ): string => {
    const baseUrl = this.$config.url.endsWith('/')
      ? this.$config.url.slice(0, -1)
      : this.$config.url;
    const pathWithParameters = Object.entries(pathParameters).reduce(
      (withParams, [key, value]) =>
        withParams.replace(\`{\${key}}\`, encodeURIComponent(\`\${value}\`)),
      path,
    );
    const queryString = Object.entries(queryParameters)
      .map(([key, value]) => {
        if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
          return value
            .map(
              (v) => \`\${encodeURIComponent(key)}=\${encodeURIComponent(\`\${v}\`)}\`,
            )
            .join('&');
        }
        return \`\${encodeURIComponent(key)}=\${encodeURIComponent(Array.isArray(value) ? value.map(String).join(',') : String(value))}\`;
      })
      .join('&');
    return (
      baseUrl + pathWithParameters + (queryString ? \`?\${queryString}\` : '')
    );
  };

  private $headers = (
    headerParameters: { [key: string]: any },
    collectionFormats?: { [key: string]: 'multi' | 'csv' },
  ): [string, string][] => {
    return Object.entries(headerParameters).flatMap(([key, value]) => {
      if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
        return value.map((v) => [key, String(v)]) as [string, string][];
      }
      return [[key, String(value)]];
    });
  };

  private $fetch: typeof fetch = (...args) =>
    (this.$config.fetch ?? fetch)(...args);

  public async order(input: OrderOperationRequest): Promise<Order> {
    const pathParameters: { [key: string]: any } = {};
    const queryParameters: { [key: string]: any } = {};
    const headerParameters: { [key: string]: any } = {};
    if (!this.$config.options?.omitContentTypeHeader) {
      headerParameters['Content-Type'] = 'application/json';
    }
    const body =
      typeof input === 'object'
        ? JSON.stringify($IO.OrderRequest.toJson(input))
        : String($IO.OrderRequest.toJson(input));

    const response = await this.$fetch(
      this.$url('/order', pathParameters, queryParameters),
      {
        headers: this.$headers(headerParameters),
        method: 'POST',
        body,
      },
    );

    if (response.status === 200) {
      return $IO.Order.fromJson(await response.json());
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }

  public async user(input: UserOperationRequest): Promise<User> {
    const pathParameters: { [key: string]: any } = {};
    const queryParameters: { [key: string]: any } = {};
    const headerParameters: { [key: string]: any } = {};
    if (!this.$config.options?.omitContentTypeHeader) {
      headerParameters['Content-Type'] = 'application/json';
    }
    const body =
      typeof input === 'object'
        ? JSON.stringify($IO.UserRequest.toJson(input))
        : String($IO.UserRequest.toJson(input));

    const response = await this.$fetch(
      this.$url('/user', pathParameters, queryParameters),
      {
        headers: this.$headers(headerParameters),
        method: 'POST',
        body,
      },
    );

    if (response.status === 200) {
      return $IO.User.fromJson(await response.json());
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }
}
"
`;
